--- a/css/styles.css
+++ b/css/styles.css
@@ -264,3 +264,11 @@ footer {
   gap: 3.2rem;
   padding: 2.4rem 0;
 }
+
+/* STICKY NAVIGATION */
+.sticky {
+  background-color: #fff;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
